--- a/fake-gen/gio/Cargo.toml
+++ b/fake-gen/gio/Cargo.toml
@@ -11,6 +11,8 @@ path = "gio.rs"
 
 [dependencies]
 bitflags = "0.1"
+glib-2_0-sys = "0.0.2"
+gobject-2_0-sys = "0.0.4"
 
 [dependencies.grust]
 git = "https://github.com/gi-rust/grust.git"
@@ -23,9 +25,3 @@ path = "../gobject"
 
 [dependencies.gio-2_0-sys]
 path = "sys"
-
-[dependencies.glib-2_0-sys]
-git = "https://github.com/gi-rust/glib-sys.git"
-
-[dependencies.gobject-2_0-sys]
-git = "https://github.com/gi-rust/gobject-sys.git"
