--- a/fake-gen/gio/Cargo.toml
+++ b/fake-gen/gio/Cargo.toml
@@ -6,13 +6,13 @@ authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com"]
 license = "LGPL-2.1+"
 
 [lib]
-name = "grust-Gio-2_0"
+name = "grust_Gio_2_0"
 path = "gio.rs"
 
 [dependencies]
 bitflags = "0.1"
-glib-2_0-sys = "0.0.7"
-gobject-2_0-sys = "0.0.8"
+glib-2_0-sys = "0.0.8"
+gobject-2_0-sys = "0.0.9"
 
 [dependencies.grust]
 git = "https://github.com/gi-rust/grust.git"
