--- a/fake-gen/glib/Cargo.toml
+++ b/fake-gen/glib/Cargo.toml
@@ -6,11 +6,11 @@ authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com"]
 license = "LGPL-2.1+"
 
 [lib]
-name = "grust-GLib-2_0"
+name = "grust_GLib_2_0"
 path = "glib.rs"
 
 [dependencies]
-glib-2_0-sys = "0.0.7"
+glib-2_0-sys = "0.0.8"
 
 [dependencies.grust]
 git = "https://github.com/gi-rust/grust.git"
