Depend on the stable branch of grust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 
 [dependencies.grust]
 git = "https://github.com/gi-rust/grust.git"
+branch = "stable"
 
 [dependencies.grust-Gio-2_0]
 path = "fake-gen/gio"
