--- a/fake-gen/glib/Cargo.toml
+++ b/fake-gen/glib/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com"]
 license = "LGPL-2.1+"
 
 [lib]
-name = "grust_GLib_2_0"
+name = "grust_glib_2_0"
 path = "glib.rs"
 
 [dependencies]
