--- a/fake-gen/gio/sys/Cargo.toml
+++ b/fake-gen/gio/sys/Cargo.toml
@@ -13,5 +13,6 @@ build = "build.rs"
 pkg-config = "0.3"
 
 [dependencies]
-glib-2_0-sys = "0.1.0"
-gobject-2_0-sys = "0.1.0"
+gtypes = "0.1"
+glib-2_0-sys = "0.2"
+gobject-2_0-sys = "0.2"
