--- a/fake-gen/gio/sys/Cargo.toml
+++ b/fake-gen/gio/sys/Cargo.toml
@@ -2,7 +2,7 @@
 
 name = "gio-2_0-sys"
 version = "0.0.1-dev"
-authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com"]
+authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
 license = "LGPL-2.1+"
 
 links = "gio-2.0"
