--- a/fake-gen/glib/Cargo.toml
+++ b/fake-gen/glib/Cargo.toml
@@ -2,7 +2,7 @@
 
 name = "grust-GLib-2_0"
 version = "0.0.1-dev"
-authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com"]
+authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
 license = "LGPL-2.1+"
 
 [lib]
