--- a/fake-gen/gio/sys/Cargo.toml
+++ b/fake-gen/gio/sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 
-name = "gio-2_0-sys"
+name = "gio-2-0-sys"
 version = "0.0.1-dev"
 authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
 license = "LGPL-2.1+"
@@ -14,5 +14,9 @@ pkg-config = "0.3"
 
 [dependencies]
 gtypes = "0.1"
-glib-2_0-sys = "0.2"
-gobject-2_0-sys = "0.2"
+
+[dependencies.glib-2-0-sys]
+git = "https://github.com/gi-rust/glib-sys.git"
+
+[dependencies.gobject-2-0-sys]
+git = "https://github.com/gi-rust/gobject-sys.git"
