--- a/fake-gen/glib/Cargo.toml
+++ b/fake-gen/glib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 
-name = "grust-GLib-2_0"
+name = "grust-glib-2-0"
 version = "0.0.1-dev"
 authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
 license = "LGPL-2.1+"
@@ -9,8 +9,8 @@ license = "LGPL-2.1+"
 name = "grust_glib_2_0"
 path = "glib.rs"
 
-[dependencies]
-glib-2_0-sys = "0.2"
+[dependencies.glib-2-0-sys]
+git = "https://github.com/gi-rust/glib-sys.git"
 
 [dependencies.grust]
 git = "https://github.com/gi-rust/grust.git"
