--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,8 @@ authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
 license = "LGPL-2.1+"
 readme = "README.md"
 
-[dependencies.grust]
-git = "https://github.com/gi-rust/grust.git"
-branch = "stable"
+[dependencies]
+grust = "0.3"
 
 [dependencies.grust-gio-2-0]
 path = "fake-gen/gio"
