--- a/fake-gen/gio/Cargo.toml
+++ b/fake-gen/gio/Cargo.toml
@@ -13,10 +13,7 @@ path = "gio.rs"
 bitflags = "0.3"
 glib-2-0-sys = "0.46"
 gobject-2-0-sys = "0.46"
-
-[dependencies.grust]
-git = "https://github.com/gi-rust/grust.git"
-branch = "stable"
+grust = "0.3"
 
 [dependencies.grust-glib-2-0]
 path = "../glib"
