--- a/fake-gen/glib/Cargo.toml
+++ b/fake-gen/glib/Cargo.toml
@@ -11,7 +11,4 @@ path = "glib.rs"
 
 [dependencies]
 glib-2-0-sys = "0.46"
-
-[dependencies.grust]
-git = "https://github.com/gi-rust/grust.git"
-branch = "stable"
+grust = "0.3"
