--- a/fake-gen/gobject/Cargo.toml
+++ b/fake-gen/gobject/Cargo.toml
@@ -11,10 +11,7 @@ path = "gobject.rs"
 
 [dependencies]
 gobject-2-0-sys = "0.46"
-
-[dependencies.grust]
-git = "https://github.com/gi-rust/grust.git"
-branch = "stable"
+grust = "0.3"
 
 [dependencies.grust-glib-2-0]
 path = "../glib"
